@@ -1,0 +1,17 @@
+/*
+ * (C) P.Horton 2004
+ *
+ * $Id$
+ *
+ * This code is covered by the GNU General Public License. For details see the file "COPYING".
+ */
+
+#ifndef _VERSION_H_
+#define _VERSION_H_
+
+#define VER_MAJOR					1
+#define VER_MINOR					10
+
+#endif
+
+/* vi:set ts=3 sw=3 cin path=include,../include: */
