@@ -1,0 +1,16 @@
+#
+# (C) P.Horton 2004
+#
+# $Id$
+#
+# This code is covered by the GNU General Public License. For details see the file "COPYING".
+#
+
+CFLAGS= -Wall -Wstrict-prototypes -fomit-frame-pointer -O2 -pipe -mips2 -fno-strict-aliasing
+
+colo-perm:
+
+clean:
+	rm -f colo-perm
+
+.PHONY: clean
